[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "physio_cassette"
version = "0.1.9"
description = "Storage structures for signals (mostly physiological data), metadata and event annotations"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
keywords = ['data storage', 'physiological signals', 'event records']
dependencies = [
    "numpy>1.20",
    "pyedflib>=0.1.28",
    "pymatreader",
    "python-dateutil>=2.8.2",
    "scipy>1.9",
    "traces>=0.5.1",
    "xmltodict>=0.13.0"
]

[project.urls]
homepage = "https://github.com/LucaCerina/physio-cassette"

[metadata]
author = "LucaCerina"
author_email = "lccerina@gmail.com"
license = "MIT"